[package]
name = "parol_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
env_logger = "0.9.1"
parol_runtime = { version = "0.9.0", features = ["auto_generation"] }
thiserror = "1.0"

[build-dependencies]
parol = "0.14.0"
